--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
